--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -90,15 +90,13 @@ jobs:
           cd openwrt
           rm -rf .config
 
-      - name: Git Auto Update Config
-        uses: stefanzweifel/git-auto-commit-action@v5.0.0
-        id: commit
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          commit_message: auto update config
-          branch: main
-          commit_author: Jejz168 <Jejz168@foxmail.com>
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.name "Jejz168"
+          git config --global user.email "Jejz168@foxmail.com"
+          git add .
+          git commit -m "Auto update config: $(date +%Y-%m-%d" "%H:%M)"
+          git push
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_ARMv8-ROOTFS:
     needs: [job_init]
