--- a/.github/workflows/ARMv8-ROOTFS.yml
+++ b/.github/workflows/ARMv8-ROOTFS.yml
@@ -99,6 +99,7 @@ jobs:
           commit_message: auto update config
           branch: main
           commit_author: Jejz168 <Jejz168@foxmail.com>
+          add_options: '-u'
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_ARMv8-ROOTFS:
     needs: [job_init]
